--- a/keycloak-setup/nginx.conf
+++ b/keycloak-setup/nginx.conf
@@ -13,16 +13,16 @@ http {
 
     server {
         listen 80;
-        server_name keycloak.shivaantainfotech.com;
+        server_name iam.dounotech.com;
         return 301 https://$host$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name keycloak-shiv.duckdns.org;
+        server_name iam.dounotech.com;
 
-        ssl_certificate "/etc/letsencrypt/live/keycloak-shiv.duckdns.org/fullchain.pem";
-        ssl_certificate_key "/etc/letsencrypt/live/keycloak-shiv.duckdns.org/privkey.pem";
+        ssl_certificate "/etc/letsencrypt/live/iam.dounotech.com/fullchain.pem";
+        ssl_certificate_key "/etc/letsencrypt/live/iam.dounotech.com/privkey.pem";
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
 
